exlib/mgr/out.log
../exlib/cbk/SDSS:288:41: error: expected unqualified-id
  std::string scmap = inlib::cbn(inlib::PI::colbr128::s_class());
                                        ^
../../ourex/wcslib/include/wcslib/wcsmath.h:57:12: note: expanded from macro 'PI'
#define PI 3.141592653589793238462643
           ^
../exlib/cbk/SDSS:293:10: error: expected unqualified-id
  inlib::PI::cmap* _cmap = inlib::PI::stocmap(scmap);
         ^
../../ourex/wcslib/include/wcslib/wcsmath.h:57:12: note: expanded from macro 'PI'
#define PI 3.141592653589793238462643
           ^
../exlib/cbk/SDSS:294:7: error: use of undeclared identifier '_cmap'; did you mean 'scmap'?
  if(!_cmap) _cmap = new inlib::PI::grey256();
      ^~~~~
      scmap
../exlib/cbk/SDSS:288:15: note: 'scmap' declared here
  std::string scmap = inlib::cbn(inlib::PI::colbr128::s_class());
              ^
../exlib/cbk/SDSS:294:6: error: invalid argument type 'std::string' (aka 'basic_string<char, char_traits<char>, allocator<char> >') to unary expression
  if(!_cmap) _cmap = new inlib::PI::grey256();
     ^~~~~~
../exlib/cbk/SDSS:294:14: error: use of undeclared identifier '_cmap'; did you mean 'scmap'?
  if(!_cmap) _cmap = new inlib::PI::grey256();
             ^~~~~
             scmap
../exlib/cbk/SDSS:288:15: note: 'scmap' declared here
  std::string scmap = inlib::cbn(inlib::PI::colbr128::s_class());
              ^
../exlib/cbk/SDSS:294:26: error: expected a type
  if(!_cmap) _cmap = new inlib::PI::grey256();
                         ^
../exlib/cbk/SDSS:298:48: error: use of undeclared identifier '_cmap'; did you mean 'scmap'?
                                    yswap,lut,*_cmap,img)) {}
                                               ^~~~~
                                               scmap
../exlib/cbk/SDSS:288:15: note: 'scmap' declared here
  std::string scmap = inlib::cbn(inlib::PI::colbr128::s_class());
              ^
../exlib/cbk/SDSS:298:47: error: indirection requires pointer operand ('std::string' (aka 'basic_string<char, char_traits<char>, allocator<char> >') invalid)
                                    yswap,lut,*_cmap,img)) {}
                                              ^~~~~~
../exlib/cbk/SDSS:299:10: error: use of undeclared identifier '_cmap'; did you mean 'scmap'?
  delete _cmap;
         ^~~~~
         scmap
../exlib/cbk/SDSS:288:15: note: 'scmap' declared here
  std::string scmap = inlib::cbn(inlib::PI::colbr128::s_class());
              ^
../exlib/cbk/SDSS:299:3: error: cannot delete expression of type 'std::string' (aka 'basic_string<char, char_traits<char>, allocator<char> >')
  delete _cmap;
  ^      ~~~~~
../exlib/cbk/SDSS:473:41: error: expected unqualified-id
  std::string scmap = inlib::cbn(inlib::PI::colbr128::s_class());
                                        ^
../../ourex/wcslib/include/wcslib/wcsmath.h:57:12: note: expanded from macro 'PI'
#define PI 3.141592653589793238462643
           ^
../exlib/cbk/SDSS:478:10: error: expected unqualified-id
  inlib::PI::cmap* _cmap = inlib::PI::stocmap(scmap);
         ^
../../ourex/wcslib/include/wcslib/wcsmath.h:57:12: note: expanded from macro 'PI'
#define PI 3.141592653589793238462643
           ^
../exlib/cbk/SDSS:479:7: error: use of undeclared identifier '_cmap'; did you mean 'scmap'?
  if(!_cmap) _cmap = new inlib::PI::grey256();
      ^~~~~
      scmap
../exlib/cbk/SDSS:288:15: note: 'scmap' declared here
  std::string scmap = inlib::cbn(inlib::PI::colbr128::s_class());
              ^
../exlib/cbk/SDSS:479:7: error: reference to local variable 'scmap' declared in enclosing function 'action_local_file'
  if(!_cmap) _cmap = new inlib::PI::grey256();
      ^
../exlib/cbk/SDSS:288:15: note: 'scmap' declared here
  std::string scmap = inlib::cbn(inlib::PI::colbr128::s_class());
              ^
../exlib/cbk/SDSS:479:6: error: invalid argument type 'std::string' (aka 'basic_string<char, char_traits<char>, allocator<char> >') to unary expression
  if(!_cmap) _cmap = new inlib::PI::grey256();
     ^~~~~~
../exlib/cbk/SDSS:479:14: error: use of undeclared identifier '_cmap'; did you mean 'scmap'?
  if(!_cmap) _cmap = new inlib::PI::grey256();
             ^~~~~
             scmap
../exlib/cbk/SDSS:288:15: note: 'scmap' declared here
  std::string scmap = inlib::cbn(inlib::PI::colbr128::s_class());
              ^
../exlib/cbk/SDSS:479:14: error: reference to local variable 'scmap' declared in enclosing function 'action_local_file'
  if(!_cmap) _cmap = new inlib::PI::grey256();
             ^
../exlib/cbk/SDSS:288:15: note: 'scmap' declared here
  std::string scmap = inlib::cbn(inlib::PI::colbr128::s_class());
              ^
../exlib/cbk/SDSS:479:26: error: expected a type
  if(!_cmap) _cmap = new inlib::PI::grey256();
                         ^
../exlib/cbk/SDSS:483:48: error: use of undeclared identifier '_cmap'; did you mean 'scmap'?
                                    yswap,lut,*_cmap,img)) {}
                                               ^~~~~
                                               scmap
../exlib/cbk/SDSS:288:15: note: 'scmap' declared here
  std::string scmap = inlib::cbn(inlib::PI::colbr128::s_class());
              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
